force-app/main/default/objects/Object_Conversion_Map__mdt/Object_Conversion_Map__mdt.object-meta.xml
<CustomObject>
    <label>Object Conversion Map</label>
    <pluralLabel>Object Conversion Maps</pluralLabel>
</CustomObject>