force-app/main/default/objects/Object_Conversion_Map__mdt/fields/Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object__c</fullName>
    <label>Destination Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>