force-app/main/default/objects/Object_Conversion_Map__mdt/fields/Destination_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Record_Type_Name__c</fullName>
    <label>Destination Record Type Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>