force-app/main/default/objects/Object_Conversion_Map__mdt/fields/No_of_Records__c.field-meta.xml
<CustomField>
    <fullName>No_of_Records__c</fullName>
    <label>No of Records</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>