force-app/main/default/objects/Object_Conversion_Map__mdt/fields/one_to_Many__c.field-meta.xml
<CustomField>
    <fullName>one_to_Many__c</fullName>
    <defaultValue>false</defaultValue>
    <label>one to Many</label>
    <type>Checkbox</type>
</CustomField>