force-app/main/default/objects/Object_Conversion_Map__mdt/fields/Verify_Field__c.field-meta.xml
<CustomField>
    <fullName>Verify_Field__c</fullName>
    <label>Verify Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>