force-app/main/default/objects/Object_Conversion_Map__mdt/listViews/Passport_Integration_Map.listView-meta.xml
<ListView>
    <fullName>Passport_Integration_Map</fullName>
    <columns>MasterLabel</columns>
    <columns>Destination_Object__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>PASS</value>
    </filters>
    <label>Passport Integration Map</label>
</ListView>