force-app/main/default/objects/Object_Conversion_Map__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Destination_Object__c</columns>
    <columns>Destination_Record_Type_Name__c</columns>
    <columns>No_of_Records__c</columns>
    <columns>one_to_Many__c</columns>
    <columns>Verify_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>